# oidiscover

./: .env.example  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  README.md  README_GRADIO.md  USAGE_GUIDE.md  app1.py  create_test_data.py  debug_api.py  gradio_app.py  pyproject.toml  run_gradio.py  start_gradio.py  test_app.py  test_chart.py  test_sales_data.xlsx
docs/: how.md
